# trex-subxt-pow

./: Cargo.toml  README.md  metadata.scale
src/: generics.rs  main.rs
